Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26319

Bad width distribution in project welcome screen

XMLWordPrintable

    • a6702d5a2df7836c48c222eff120a25a16059d3f (qt-creator/tqtc-qt-creator/5.0)

      The "Sessions" and "Projects" lists in the project welcome screen have an awkward width distribution. On a FullHD screen (1920px width), the Sessions are squeezed and the Projects are extra wide.

      TODO: Make sure that they grow horizontally, proportionally. like this:

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes